# ScreenedBondValence

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BVparams_fit_example.ipynb  BVparams_search.py  README.md  app.py  bond_valence_processor.py  pyproject.toml  requirements.txt
docs/adr/: 0001-package-first-layout.md  0002-oxidation-state-resolution-policy.md  0003-resumable-batch-output-tree.md  0004-compact-summary-payload-for-downstream-integrations.md  0005-lazy-import-boundaries.md
docs/integrations/: critical_mineral_project.md
screened_bond_valence/: __init__.py  api.py  cli.py  constants.py  models.py  processor.py  solvers.py  web.py
tests/: test_api.py  test_cli.py  test_golden_outputs.py  test_models.py  test_processor.py  test_solvers.py
tests/golden/: 1011191_aspod_shgo.json  example_shgo.json
